# stargazer-project

./: .pre-commit-config.yaml  README.md  main.py  pyproject.toml
starneighbours/: business.py  database.py  models.py
unit_tests/: test_business.py  test_main.py
