[tool.poetry]
name = "fastapiproject"
version = "0.1.0"
description = ""
authors = ["Thibaut Stalin <thibaut.st@gmail.com>"]
readme = "README.md"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.87.0"
uvicorn = "^0.19.0"
aiohttp = "^3.8.3"
fastapi-login = "^1.8.3"
python-multipart = "^0.0.5"


[tool.poetry.group.dev.dependencies]
coverage = "^6.5.0"
black = { extras = ["d"], version = "^22.10.0" }
isort = "^5.10.1"
mypy = "^0.990"
pylint = "^2.15.5"
pre-commit = "^2.20.0"
bandit = "^1.7.4"
sphinx = "^5.3.0"

# SETTINGS
datamodel-code-generator = "^0.13.5"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pylint.main]
extension-pkg-whitelist = "pydantic"

[tool.pylint.messages_control]
max-line-length = 120
disable = [
    "too-many-instance-attributes",
    "too-few-public-methods"
]